luxtensor/node_error.txt
cargo : warning: unused import: `Write`
At line:1 char:1
+ cargo build --package luxtensor-node 2>&1 | 
Out-File -FilePath "node_ ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (wa 
   rning: unused import: `Write`:String) [], R  
  emoteException
    + FullyQualifiedErrorId : NativeCommandErro 
   r
 
  --> crates\luxtensor-storage\src\maintenance.r
s:10:27
   |
10 | use std::io::{self, Read, Write};
   |                           ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `Read`
  --> crates\luxtensor-storage\src\maintenance.r
s:10:21
   |
10 | use std::io::{self, Read, Write};
   |                     ^^^^

warning: field `pending_ops` is never read
   --> crates\luxtensor-contracts\src\account_ab
straction.rs:178:5
    |
170 | pub struct EntryPoint {
    |            ---------- field in this struct
...
178 |     pending_ops: Arc<RwLock<HashMap<Hash, 
UserOperation>>>,
    |     ^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: 
`std::collections::HashMap`
 --> crates\luxtensor-consensus\src\long_range_p
rotection.rs:6:5
  |
6 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `error`
  --> crates\luxtensor-consensus\src\circuit_bre
aker.rs:14:27
   |
14 | use tracing::{info, warn, error};
   |                           ^^^^^

warning: unused variable: `block_height`
   --> 
crates\luxtensor-consensus\src\pos.rs:146:36
    |
146 |     pub fn get_halving_info(&self, 
block_height: u64) -> 
crate::halving::HalvingInfo {
    |                                    
^^^^^^^^^^^^ help: if this is intentional, 
prefix it with an underscore: `_block_height`
    |
    = note: `#[warn(unused_variables)]` (part 
of `#[warn(unused)]`) on by default

warning: unused variable: `current_block`
   --> crates\luxtensor-consensus\src\weight_con
sensus.rs:398:9
    |
398 |         current_block: u64,
    |         ^^^^^^^^^^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_current_block`

warning: field `dao_address` is never read
  --> crates\luxtensor-consensus\src\reward_exec
utor.rs:70:5
   |
49 | pub struct RewardExecutor {
   |            -------------- field in this 
struct
...
70 |     dao_address: [u8; 20],
   |     ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of 
`#[warn(unused)]`) on by default

warning: `luxtensor-storage` (lib) generated 2 
warnings (run `cargo fix --lib -p 
luxtensor-storage` to apply 1 suggestion)
warning: `luxtensor-contracts` (lib) generated 
1 warning
warning: `luxtensor-consensus` (lib) generated 
5 warnings (run `cargo fix --lib -p 
luxtensor-consensus` to apply 4 suggestions)
warning: unused imports: `Deserialize` and 
`Serialize`
 --> crates\luxtensor-rpc\src\error.rs:2:13
  |
2 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
  --> 
crates\luxtensor-rpc\src\admin_auth.rs:10:5
   |
10 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

warning: unexpected `cfg` condition value: 
`reqwest`
  --> 
crates\luxtensor-rpc\src\load_balancer.rs:95:11
   |
95 |     #[cfg(feature = "reqwest")]
   |           ^^^^^^^^^^^^^^^^^^^ help: remove 
the condition
   |
   = note: no expected values for `feature`
   = help: consider adding `reqwest` as a 
feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightl
y/rustc/check-cfg/cargo-specifics.html> for 
more information about checking conditional 
configuration
   = note: `#[warn(unexpected_cfgs)]` on by 
default

warning: unexpected `cfg` condition value: 
`reqwest`
   --> 
crates\luxtensor-rpc\src\load_balancer.rs:111:19
    |
111 |             #[cfg(feature = "reqwest")]
    |                   ^^^^^^^^^^^^^^^^^^^ 
help: remove the condition
    |
    = note: no expected values for `feature`
    = help: consider adding `reqwest` as a 
feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/night
ly/rustc/check-cfg/cargo-specifics.html> for 
more information about checking conditional 
configuration

warning: unused import: `Value`
 --> crates\luxtensor-rpc\src\tx_rpc.rs:7:39
  |
7 | use jsonrpc_core::{IoHandler, Params, 
Value};
  |                                       ^^^^^

warning: unused import: `generate_tx_hash`
  --> crates\luxtensor-rpc\src\tx_rpc.rs:57:46
   |
57 |         use 
crate::eth_rpc::{hex_to_address, 
generate_tx_hash};
   |                                            
  ^^^^^^^^^^^^^^^^

warning: unused variable: `validators_config`
   --> crates\luxtensor-rpc\src\handlers\staking
.rs:313:9
    |
313 |     let validators_config = 
validators.clone();
    |         ^^^^^^^^^^^^^^^^^ help: if this 
is intentional, prefix it with an underscore: 
`_validators_config`
    |
    = note: `#[warn(unused_variables)]` (part 
of `#[warn(unused)]`) on by default

warning: unused import: `warn`
 --> 
crates\luxtensor-network\src\identity.rs:8:21
  |
8 | use tracing::{info, warn};
  |                     ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `PeerCapabilities`
 --> crates\luxtensor-network\src\swarm.rs:6:61
  |
6 | use crate::peer_discovery::{PeerDiscovery, 
DiscoveryConfig, PeerCapabilities};
  |                                             
                ^^^^^^^^^^^^^^^^

warning: unused import: `error`
  --> 
crates\luxtensor-network\src\swarm.rs:22:22
   |
22 | use tracing::{debug, error, info, warn};
   |                      ^^^^^

warning: unused import: `std::sync::Arc`
  --> crates\luxtensor-network\src\peer_discover
y.rs:14:5
   |
14 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> 
crates\luxtensor-network\src\swarm.rs:146:13
    |
146 |         let mut kademlia_config = 
kad::Config::new(
    |             ----^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of 
`#[warn(unused)]`) on by default

warning: field `config` is never read
   --> crates\luxtensor-network\src\p2p.rs:113:5
    |
111 | pub struct P2PNode {
    |            ------- field in this struct
112 |     peer_manager: PeerManager,
113 |     config: P2PConfig,
    |     ^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of 
`#[warn(unused)]`) on by default

warning: field `transactions_topic` is never 
read
  --> crates\luxtensor-network\src\swarm.rs:56:5
   |
51 | pub struct SwarmP2PNode {
   |            ------------ field in this 
struct
...
56 |     transactions_topic: IdentTopic,
   |     ^^^^^^^^^^^^^^^^^^

warning: `luxtensor-rpc` (lib) generated 7 
warnings (run `cargo fix --lib -p 
luxtensor-rpc` to apply 5 suggestions)
warning: `luxtensor-network` (lib) generated 7 
warnings (run `cargo fix --lib -p 
luxtensor-network` to apply 5 suggestions)
   Compiling luxtensor-node v0.4.0 (D:\venera\ca
rdano\moderntensor\moderntensor\luxtensor\crates
\luxtensor-node)
warning: unused imports: `error` and `warn`
  --> 
crates\luxtensor-node\src\shutdown.rs:12:21
   |
12 | use tracing::{info, warn, error};
   |                     ^^^^  ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused imports: `error` and `warn`
  --> crates\luxtensor-node\src\graceful_shutdow
n.rs:10:21
   |
10 | use tracing::{info, warn, error};
   |                     ^^^^  ^^^^^

error[E0615]: attempted to take value of method 
`hash` on type `BlockHeader`
   --> 
crates\luxtensor-node\src\service.rs:877:104
    |
877 | ...                   if let Err(e) = 
manager.create_checkpoint(current_height, 
block.header.hash, block.header.state_root) {
    |                                           
                                                
   ^^^^ method, not a field
    |
help: use parentheses to call the method
    |
877 |                                 if let 
Err(e) = 
manager.create_checkpoint(current_height, 
block.header.hash(), block.header.state_root) {
    |                                           
                                                
                 ++

warning: unused import: `futures::FutureExt`
 --> crates\luxtensor-node\src\service.rs:5:5
  |
5 | use futures::FutureExt;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused variable: `tx_broadcast_tx`
   --> 
crates\luxtensor-node\src\service.rs:356:14
    |
356 |         let (tx_broadcast_tx, mut 
tx_broadcast_rx) = 
mpsc::unbounded_channel::<Transaction>();
    |              ^^^^^^^^^^^^^^^ help: if 
this is intentional, prefix it with an 
underscore: `_tx_broadcast_tx`
    |
    = note: `#[warn(unused_variables)]` (part 
of `#[warn(unused)]`) on by default

For more information about this error, try 
`rustc --explain E0615`.
warning: `luxtensor-node` (bin 
"luxtensor-node") generated 4 warnings
error: could not compile `luxtensor-node` (bin 
"luxtensor-node") due to 1 previous error; 4 
warnings emitted
